Bug #45524
ceph-fuse: the -d option couldn't enable the debug mode in libfuse
% Done:
0%
Source:
Development
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
ceph-fuse
Labels (FS):
Pull request ID:
Crash signature:
Description
[root@lxbceph0 build]# ./bin/ceph-fuse -h
usage: ceph-fuse [-n client.username] [-m mon-ip-addr:mon-port] <mount point> [OPTIONS]
--client_mountpoint/-r <sub_directory>
use sub_directory as the mounted root, rather than the full Ceph tree.
usage: ceph-fuse [options] <mountpoint>
FUSE options:
-h --help print help
-V --version print version
-d -o debug enable debug output (implies -f)
-f foreground operation
-s disable multi-threaded operation
-o clone_fd use separate fuse device fd for each thread
(may improve performance)
-o max_idle_threads the maximum number of idle worker threads
allowed (default: 10)
-o allow_other allow access by all users
-o allow_root allow access by root
-o auto_unmount auto unmount on process termination
--conf/-c FILE read configuration from the given configuration file
--id ID set ID portion of my name
--name/-n TYPE.ID set name
--cluster NAME set cluster name (default: ceph)
--setuser USER set uid to user or uid (and gid to user's gid)
--setgroup GROUP set gid to group or gid
--version show version and quit
The -d option will be dropped by the global_init() and the libfuse couldn't see it.
Related issues
History
#7 Updated by Patrick Donnelly 9 months ago
- Target version set to v16.0.0
- Source set to Development
- Backport set to octopus,nautilus
- ceph-qa-suite deleted (
fs)
#8 Updated by Patrick Donnelly 9 months ago
- Status changed from Fix Under Review to Pending Backport
#9 Updated by Nathan Cutler 9 months ago
- Copied to Backport #45842: octopus: ceph-fuse: the -d option couldn't enable the debug mode in libfuse added
#10 Updated by Nathan Cutler 9 months ago
- Copied to Backport #45843: nautilus: ceph-fuse: the -d option couldn't enable the debug mode in libfuse added
#11 Updated by Nathan Cutler 8 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".