ceph_fuse: enable fuse_debug when the '-d' option is specified

The global_init() will check and remove the -d option, but it should
enable the libfuse debug mode.

Fixes: https://tracker.ceph.com/issues/45524
Signed-off-by: Xiubo Li <xiubli@redhat.com>